--- a/src/Navbar/Navbar.css
+++ b/src/Navbar/Navbar.css
@@ -1,96 +1,99 @@
 @font-face {
-    font-family: "Paragone";
-    src: url(/paragone-luxury-serif-font/Paragone/Paragone.ttf);
+  font-family: "Paragone";
+  src: url(/paragone-luxury-serif-font/Paragone/Paragone.ttf);
 }
 @font-face {
-    font-family: "BodyParagone";
-    src: url(/paragone-luxury-serif-font/Paragone/Paragone.otf);
+  font-family: "BodyParagone";
+  src: url(/paragone-luxury-serif-font/Paragone/Paragone.otf);
 }
 
- .nav-logo{
+.navbar-logo {
+  height: 50px;
+  border-radius: 90px;
+}
+:root {
+  --mainColor: transparent;
+  --mainColorLight: #3b5249;
+  --secondarColor: peachpuff;
+  --textColor: #eee;
+}
+.header {
+  display: flex;
+  /* align-items: center; */
+  justify-content: space-between;
   height: 40px;
-  margin-right: 10px;
- }
+  padding: 0 2rem;
+  background-color: var(--mainColor);
+  color: var(--textColor);
+  /* background-color: pink; */
+  padding: 10px;
+}
+.bars{
+    position: absolute;
+    top: 15px;
+    right: 28px;
+    transform: scale(2.9,1.5);
+    font-size: 18px;
+    margin-top: 8px;
+    /* background-color: pink; */
+}
+.the{
+margin-left: -758px;
+font-size: 40px;
+}
 
-.home{
-    font-size: 30px;
+nav a {
+  margin: 0 2rem;
+  color: var(--textColor);
+  text-decoration: none;
 
 }
-  :root {
-    --mainColor: #2e282a;
-    --mainColorLight: #3b5249;
-    --secondarColor: peachpuff;
-    --textColor: grey;
-  }
-  .header {
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-    height: 80px;
-    padding: 0 2rem;
-    cursor: pointer;
-    /* background-color: var(--mainColor); */
-    /* color: var(--textColor); */
-  }
-  nav{
-    /* background-color: pink; */
-    margin-left: 65%;
-    font-size: 120%;
-    font-weight: bold;
-  }
-  nav a {
-    margin: 0 2rem;
-    color: var(--textColor);
-    text-decoration: none;
-  }
-  nav a:hover {
-    color: var(--secondarColor);
-  }
+nav a:hover {
+  color: var(--secondarColor);
+}
+header .nav-btn {
+  padding: 5px;
+  cursor: pointer;
+  background: transparent;
+  border: none;
+  outline: none;
+  color: var(--textColor);
+  visibility: hidden;
+  opacity: 0;
+  font-size: 1.8rem;
+}
+
+@media only screen and (max-width: 1024px) {
   header .nav-btn {
-    padding: 5px;
-    cursor: pointer;
-    background: transparent;
-    border: none;
-    outline: none;
-    color: var(--textColor);
-    visibility: hidden;
-    opacity: 0;
-    font-size: 1.8rem;
+    visibility: visible;
+    opacity: 1;
   }
-  
-  @media only screen and (max-width: 1024px) {
-    header .nav-btn {
-      visibility: visible;
-      opacity: 1;
-    }
-    header nav {
-      position: fixed;
-      float: right;
-      top: 0;
-      left: 0;
-      height: 100%;
-      width: 100%;
-      display: flex;
-      flex-direction: column;
-      align-items: center;
-      justify-content: center;
-      gap: 1.5rem;
-      background-color: var(--mainColor);
-      transition: 1s;
-      transform: translateY(-100vh);
-    }
-  
-    header .responsive_nav {
-      transform: none;
-    }
-  
-    nav .nav-close-btn {
-      position: absolute;
-      top: 2rem;
-      right: 2rem;
-    }
-    nav a{
-      font-size: 1.5rem;
-    }
+  header nav {
+    position: fixed;
+    top: 0;
+    left: 0;
+    height: 100%;
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    /* align-items: center; */
+    justify-content: center;
+    gap: 1.5rem;
+    background-color: var(--mainColor);
+    transition: 1s;
+    transform: translateY(-100vh);
   }
-  
+
+  header .responsive_nav {
+    transform: none;
+  }
+
+  nav .nav-close-btn {
+    position: absolute;
+    top: 2rem;
+    right: 2rem;
+  }
+  nav a{
+    font-size: 1.5rem;
+  }
+}
