--- a/src/Residence/Residence.css
+++ b/src/Residence/Residence.css
@@ -1,19 +1,47 @@
 .grid-container-element {
   display: grid;
   grid-template-columns: 6fr 9fr;
+  grid-gap: 0px;
   width: 100%;
   height: 100vh;
+  background-color: grey;
+  margin: 0 0 0 0;
 }
+.grid-child-element.purple {
+  background-color: #fcf8f5;
+  text-align: center;
+  margin: 0 0 0 0;
+}
+.grid-child-element.green {
+  margin: 0 0 0 0;
+}
+.content {
+  /* background: pink; */
+  font-size: 200%;
+  height: 320px;
+ 
+}
+.reside{
+  font-family: 'luxury2';
+  font-size: 40px;
+  color: #7b7471;
+  margin-bottom: 15px;
+  margin-top: 15px;
+  
+}
+.reside-paragraph{
+  font-family: 'luxury';
+  /* background-color: pink; */
+  text-align: center;
+  color: #7b7471;
+}
+
 @font-face {
   font-family: 'luxury2';
   src: url(/din/fonts/FF\ DIN\ Pro\ Regular\ 2.otf);
 }
-.reside{
-  font-family: 'luxury2';
-}
-.reside.paragraph{
-  color: #7b7471;
-}
+
+
 .grid-child-element {
   object-fit: fill;
 }
@@ -22,17 +50,7 @@
   height: 100vh;
   object-fit: fill;
 }
-.grid-child-element.purple {
-  background-color: #fcf8f5;
-  text-align: center;
-  
-}
-.content {
-  /* background: pink; */
-  font-size: 200%;
-  height: 290px;
-  margin-top: 290px;
-}
+
 
 .residence-home-logo{
   height: 100px;
@@ -55,6 +73,7 @@
   -webkit-user-select: none;
   touch-action: manipulation;
   width: 40%;
+  margin-top: 15px;
 }
 
 .button-46:active,
