--- a/src/Amenities/Amenities.css
+++ b/src/Amenities/Amenities.css
@@ -1,10 +1,10 @@
 .grid-container-element {
     display: grid;
     grid-template-columns: 6fr 9fr;
-    /* grid-gap: 20px;  */
+    grid-gap: 0px; 
     /* border: 1px solid black; */
     width: 100%;
-    height: 100vh;
+    height: 100vh; 
   }
   .grid-child-element {
     /* margin: 10px;  */
