--- a/src/Neighborhood/Neighborhood.css
+++ b/src/Neighborhood/Neighborhood.css
@@ -1,80 +1,96 @@
-.grid-container-element {
-    display: grid;
-    grid-template-columns: 9fr 6fr;
-    /* grid-gap: 20px;  */
-    /* border: 1px solid black; */
-    width: 100%;
-    height: 100vh;
-  }
-  .grid-child-element {
-    /* margin: 10px;  */
-    /* background-color: peachpuff; */
-    /* border: 1px solid red; */
-    object-fit: fill;
-  }
-  .childimage {
-    width: 100%;
-    height: 100vh;
-  }
-  .grid-child-element.purple {
-   
-    text-align: center;
-  }
-  .content {
-    /* background: pink; */
-    font-size: 200%;
-    height: 290px;
-    margin-top: 290px;
-  }
-  .redirect-button{
-      height: 100px;
-  }
+.grid-container-neighbor {
+  display: grid;
+  grid-template-columns: 9fr 6fr;
+  grid-gap: 0px;
+  width: 100%;
+  height: 100vh;
+  margin: 0 0 0 0;
+}
+.grid-child-element.jirani {
+  background-color: grey;
+  color: white;
+  text-align: center;
+  margin: 0 0 0 0;
+}
+.grid-child-element.green {
+  margin: 0 0 0 0;
+}
+.content {
+  /* background: pink; */
+  color: white;
+  font-size: 200%;
+  height: 320px;
+ 
+}
+.jirani-main{
+  font-family: 'luxury2';
+  font-size: 40px;
   
+  margin-bottom: 15px;
+  margin-top: 15px;
+  
+}
+.jirani-paragraph{
+  font-family: 'luxury';
+  /* background-color: pink; */
+  text-align: center;
+  color: white;
+}
+
+@font-face {
+  font-family: 'luxury2';
+  src: url(/din/fonts/FF\ DIN\ Pro\ Regular\ 2.otf);
+}
+
+
+.grid-child-element {
+  object-fit: fill;
+}
+.residenceimagehome {
+  width: 100%;
+  height: 100vh;
+  object-fit: fill;
+}
+
+
+.residence-home-logo{
+  height: 100px;
+}
+.button-46 {
+  align-items: center;
+  background-color: goldenrod;
+  border: 1px solid #DFDFDF;
+  box-sizing: border-box;
+  color: #000000;
+  cursor: pointer;
+  font-size: 28px;
+  justify-content: center;
+  line-height: 28px;
+  max-width: 100%;
+  padding: 14px 22px;
+  text-decoration: none;
+  transition: all .2s;
+  user-select: none;
+  -webkit-user-select: none;
+  touch-action: manipulation;
+  width: 40%;
+  margin-top: 15px;
+}
+
+.button-46:active,
+.button-46:hover {
+  outline: 0;
+}
+
+.button-46:hover {
+  background-color: #FFFFFF;
+  border-color: rgba(0, 0, 0, 0.19);
+}
+
+@media (min-width: 768px) {
   .button-46 {
-    align-items: center;
-    background-color: rgba(240, 240, 240, 0.26);
-    border: 1px solid #DFDFDF;
-    /* border-radius: 16px; */
-    box-sizing: border-box;
-    color: #000000;
-    cursor: pointer;
-    font-size: 28px;
-    justify-content: center;
-    line-height: 28px;
-    max-width: 100%;
-    padding: 14px 22px;
-    text-decoration: none;
-    transition: all .2s;
-    user-select: none;
-    -webkit-user-select: none;
-    touch-action: manipulation;
-    width: 40%;
+    font-size: 20px;
+    min-width: 200px;
+    padding: 14px 16px;
   }
-  
-  .button-46:active,
-  .button-46:hover {
-    outline: 0;
-  }
-  
-  .button-46:hover {
-    background-color: #FFFFFF;
-    border-color: rgba(0, 0, 0, 0.19);
-  }
-  
-  @media (min-width: 768px) {
-    .button-46 {
-      font-size: 20px;
-      min-width: 200px;
-      padding: 14px 16px;
-    }
-  }
-  @font-face {
-    font-family: 'luxury2';
-    src: url(/din/fonts/FF\ DIN\ Pro\ Regular\ 2.otf);
-  }
-  .reside{
-    font-family: 'luxury2';
-  }
-  .neigh-logo{
-    height: 100px;
-  }
+}
