--- a/src/Navbar/Navbar.css
+++ b/src/Navbar/Navbar.css
@@ -35,6 +35,7 @@
     transform: scale(2.9,1.5);
     font-size: 18px;
     margin-top: 8px;
+    color: white;
     /* background-color: pink; */
 }
 .the{
