--- a/src/Neighborhood/NeighMap.css
+++ b/src/Neighborhood/NeighMap.css
@@ -1,6 +1,6 @@
-.grid-container-element {
+.grid-container-elementr {
   display: grid;
-  grid-template-columns: 4fr 9fr;
+  grid-template-columns: 3fr 7fr;
   /* grid-gap: 20px;  */
   /* border: 1px solid black; */
   width: 100%;
