--- a/src/Amenities/Amenities.css
+++ b/src/Amenities/Amenities.css
@@ -78,3 +78,21 @@
   .amenity-logo{
     height: 100px;
   }
+  .logo-top-left a{
+    text-decoration: none;
+    color: black;
+    font-size: 30px;
+    margin-left: 20px;
+    /* background-color: pink; */
+    }
+    .bars-top-right{
+      /* background-color: purple; */
+      position: absolute;
+        top: 15px;
+        right: 59px;
+        transform: scale(2.9,1.5);
+        font-size: 18px;
+        margin-top: 8px;
+        color: white;
+    
+    }
