--- a/src/Availability/Availability.css
+++ b/src/Availability/Availability.css
@@ -73,3 +73,13 @@
     font-weight: bold;
     color: rgb(110, 106, 106);
   }
+  .explore-avia {
+    font-family: 'luxury';
+    font-weight: bold;
+    color: #7c7471;
+   
+    font-weight: bold;
+    text-align: center;
+    cursor: pointer;
+    margin-top: 0px;
+  }
