--- a/src/Neighborhood/Neighborhood.css
+++ b/src/Neighborhood/Neighborhood.css
@@ -94,3 +94,27 @@
     padding: 14px 16px;
   }
 }
+.logo-top-leftt{
+  /* background-color: purple; */
+  position: absolute;
+    top: 15px;
+    left: 28px;
+}
+.logo-top-leftt a{
+text-decoration: none;
+color: white;
+font-size: 30px;
+margin-left: 20px;
+/* background-color: pink; */
+}
+.bars-top-right{
+  /* background-color: purple; */
+  position: absolute;
+    top: 10px;
+    right: 59px;
+    transform: scale(2.9,1.5);
+    font-size: 18px;
+    margin-top: 8px;
+    color: white;
+
+}
