--- a/src/Amenities/Amenitieschild.css
+++ b/src/Amenities/Amenitieschild.css
@@ -43,8 +43,8 @@
 .amen-3 {
   padding: 6px;
   color: grey;
-  height: 599px;
-  background: black;
+  height: 630px;
+  background: rgb(49, 49, 49);
 }
 /* EXPLORE */
 .arrow {
@@ -93,17 +93,27 @@
   margin-right: 310px;
   font-family: "luxury";
 }
-.care {
+.carey{
   margin-top: 20px;
-  color: grey;
+  color: goldenrod;
   font-family: "luxury";
   font-size: 30px;
+  margin-left: 40px;
 }
-.paragraph-bottom {
-  /* background-color: pink; */
-  height: 200px;
-  font-size: 20px;
-  margin-top: 90px;
+.ring{
+  /* text-align: center; */
+  padding: 5px 5px 5px 5px;
+  height: 250px;
+  margin-top: 50px;
+  
+}
+.paragraph-bottommer {
+  padding: 29px 27px 7px 7px;
+ /* background-color: pink; */
+  margin-left: 40px;
+  height: 100px;
+  font-size: 17px;
+  margin-top: 50px;
   color: grey;
   font-family: "luxury";
 }
