--- a/src/Amenities/Sun.css
+++ b/src/Amenities/Sun.css
@@ -1,30 +1,66 @@
-.grid-container {
+.grid-container-sun {
     display: grid;
-    grid-template-columns: 1fr 1fr 1fr;
-    grid-gap: 20px;
+    grid-template-columns: 0.4fr 1fr 1fr;
+    grid-gap: 10px;
     margin-left: 20px;
     margin-right: 20px;
     
 }
-.skygardens{
-    height: 250px;
-    background: goldenrod;
+@font-face {
+    font-family: "luxury";
+    src: url(/din/fonts/FF\ DIN\ Pro\ Regular.otf);
+  }
+.kubwa-sun{
+    /* background-color: pink; */
+    margin: 0 0 0 0;
+}
+.the-sun {
+    color: gray;
+    height: 370px;
+    background: rgb(62, 61, 61);
     padding: 5px;
     text-align: center;
-    font-size: 250%;
-}
-.center1{
-    /* background-color: pink; */
+  }
+  h1.brown-section{
+    font-size: 180%;
+    font-family: 'luxury';
+  }
+  h6.brown-section{
+    font-size: 18px;
+    margin-top: 30px;
+    margin-right: 110px;
+    font-family: 'luxury';
+  }
+  .center1{
+   /* background-color: brown; */
     margin-top: 20px;
     padding: 10px;
-    font-size: 160%;
+    height: 200px;
     color: goldenrod;
     border-bottom: 2px solid grey;
 }
-.disclaimer{
+  .sunner{
+    margin-top: 40px;
+    font-family: 'luxury';
+    font-size:270%;
+  }
+  .disclaimer{
     /* background-color: grey; */
     height:130px;
     padding: 6px;
     font-size: 120%;
+    margin-top: 30px;
 
 }
+  .eastward{
+    font-family: 'luxury';
+    font-size: 160%;
+    margin-top: 10px;
+    color: gray;
+    font-weight: bold;
+  }
+  .east-gard{
+    font-family: 'luxury';
+    margin-top: 15px;
+    color: grey;
+  }
