--- a/src/Amenities/Amenities.css
+++ b/src/Amenities/Amenities.css
@@ -2,14 +2,11 @@
     display: grid;
     grid-template-columns: 6fr 9fr;
     grid-gap: 0px; 
-    /* border: 1px solid black; */
+  
     width: 100%;
     height: 100vh; 
   }
   .grid-child-element {
-    /* margin: 10px;  */
-    /* background-color: peachpuff; */
-    /* border: 1px solid red; */
     object-fit: fill;
   }
   .childimage {
@@ -36,7 +33,7 @@
     border: 1px solid #DFDFDF;
     /* border-radius: 16px; */
     box-sizing: border-box;
-    color: #000000;
+    color: #ffffff;
     cursor: pointer;
     font-size: 28px;
     justify-content: center;
@@ -57,8 +54,9 @@
   }
   
   .button-46:hover {
-    background-color: #FFFFFF;
-    border-color: rgba(0, 0, 0, 0.19);
+    color: goldenrod;
+  background-color: #FFFFFF;
+  border-color: rgba(0, 0, 0, 0.19);
   }
   
   @media (min-width: 768px) {
@@ -78,21 +76,37 @@
   .amenity-logo{
     height: 100px;
   }
+  .logo-top-left{
+    position: absolute;
+      top: 15px;
+      left: 28px;
+  }
+  .logo-top-left img{
+    height: 70px;
+  
+  }
   .logo-top-left a{
-    text-decoration: none;
-    color: black;
-    font-size: 30px;
-    margin-left: 20px;
-    /* background-color: pink; */
+  text-decoration: none;
+  /* color: black; */
+  font-size: 30px;
+  margin-left: 20px;
+  position: absolute;
+      top: 20px;
+      left: 66px;
+      width: 150px;
+      color: #7b7471;
     }
-    .bars-top-right{
-      /* background-color: purple; */
-      position: absolute;
-        top: 15px;
-        right: 59px;
-        transform: scale(2.9,1.5);
-        font-size: 18px;
-        margin-top: 8px;
-        color: white;
-    
-    }
+  .bars-top-right{
+    /* background-color: purple; */
+    position: absolute;
+      top: 10px;
+      right: 59px;
+      transform: scale(2.9,1.5);
+      font-size: 18px;
+      margin-top: 8px;
+      color: white;
+  
+  }
+  .residenceimagehome{
+    object-fit: cover;
+  }
