--- a/src/Amenities/Amenitieschild.css
+++ b/src/Amenities/Amenitieschild.css
@@ -136,3 +136,14 @@
   text-align: center;
   cursor: pointer;
 }
+.paragraph-infinite {
+  text-align: center;
+  padding: 25px 0px 7px 7px;
+ /* background-color: pink; */
+  margin-left: 180px;
+  
+  font-size: 120%;
+  margin-top: 250px;
+  color: grey;
+  font-family: "luxury";
+}
