--- a/src/Home/Home.css
+++ b/src/Home/Home.css
@@ -59,7 +59,7 @@
 .logo {
   border-radius: 150px;
   height: 250px;
-  background: transparent;
+  /* background: white; */
 }
 
 .explore {
@@ -71,15 +71,17 @@
   font-weight: bold;
   text-align: center;
   cursor: pointer;
+  
 }
 .riverside-drive-nairobi{
   position: absolute;
-    bottom: 35px;
+    bottom: 27px;
     right: 20px;
     font-family: 'luxury';
-    font-size: 15px;
+    font-size: 20px;
+    font-weight: normal;
 }
 .nav-to{
-  margin-top: 10px;
+  margin-top: 17px;
   font-family: 'luxury';
 }
