--- a/src/Navbar/ChildNav.css
+++ b/src/Navbar/ChildNav.css
@@ -10,9 +10,10 @@
     font-family: "luxury";
     src: url(/din/fonts/FF\ DIN\ Pro\ Regular.otf);
   }
-  .navbar-logo {
-    height: 50px;
+  .navbary-logo {
+    height: 67px;
     border-radius: 90px;
+    margin-bottom: 10px;
   }
   :root {
     --mainColor: transparent;
@@ -20,18 +21,17 @@
     --secondarColor: peachpuff;
     --textColor: #eee;
   }
-  .header {
+  .headerr {
     display: flex;
-    /* align-items: center; */
     justify-content: space-between;
     height: 70px;
     padding: 0 2rem;
-    background-color: var(--mainColor);
-  
+    /* background-color: pink; */
     padding: 10px;
   }
-  nav{
-    height: 80px;
+  .mtoto nav{
+    /* background-color: pink; */
+    height: 70px;
   }
   .barss{
       position: absolute;
@@ -40,8 +40,6 @@
       transform: scale(2.9,1.5);
       font-size: 18px;
       margin-top: 8px;
-      color: black;
-      
       color: black;
   }
   .menu{
@@ -58,10 +56,11 @@
   }
   .th{
   margin-left: -788px;
-  margin-top: 19px;
-  font-size: 20px;
-  color: rgb(104, 102, 102);
+  margin-top: 29px;
+  font-size: 25px;
+  color: #7b7471;
   font-family: 'luxury';
+  
   }
   
   nav a {
@@ -71,7 +70,7 @@
   
   }
   nav a:hover {
-    color: var(--secondarColor);
+    color: goldenrod;
   }
   header .nav-btn {
     padding: 5px;
@@ -119,4 +118,9 @@
       font-size: 1.5rem;
     }
   }
-  
+  .touch{
+    font-family: 'luxury';
+    margin-right: 6px;
+    margin-left: 6px;
+    color: #7b7471;
+  }
