--- a/src/Navbar/Navbar.css
+++ b/src/Navbar/Navbar.css
@@ -13,8 +13,9 @@
 }
 :root {
   --mainColor: transparent;
-  --mainColorLight: #3b5249;
-  --secondarColor: peachpuff;
+  /* --mainColorLight: #3b5249; */
+  --text360screen:10px;
+  --secondarColor: goldenrod;
   --textColor: #eee;
 }
 .header {
@@ -25,7 +26,7 @@
   padding: 0 2rem;
   background-color: var(--mainColor);
   color: var(--textColor);
-  /* background-color: pink; */
+  /* background-color: white; */
   padding: 10px;
 }
 .bars{
@@ -39,8 +40,11 @@
     /* background-color: pink; */
 }
 .the{
-margin-left: -758px;
-font-size: 40px;
+margin-left: -800px;
+padding-top: 13px;
+font-size: 23px;
+/* background-color: pink; */
+
 }
 
 nav a {
@@ -77,7 +81,7 @@ header .nav-btn {
     width: 100%;
     display: flex;
     flex-direction: column;
-    /* align-items: center; */
+    align-items: center;
     justify-content: center;
     gap: 1.5rem;
     background-color: var(--mainColor);
