--- a/src/Neighborhood/Neighborhood.css
+++ b/src/Neighborhood/Neighborhood.css
@@ -35,6 +35,7 @@
   /* background-color: pink; */
   text-align: center;
   color: white;
+  font-weight: normal;
 }
 
 @font-face {
@@ -61,7 +62,7 @@
   background-color: goldenrod;
   border: 1px solid #DFDFDF;
   box-sizing: border-box;
-  color: #000000;
+  color: #ffffff;
   cursor: pointer;
   font-size: 28px;
   justify-content: center;
@@ -83,6 +84,7 @@
 }
 
 .button-46:hover {
+  color: goldenrod;
   background-color: #FFFFFF;
   border-color: rgba(0, 0, 0, 0.19);
 }
@@ -95,18 +97,25 @@
   }
 }
 .logo-top-leftt{
-  /* background-color: purple; */
   position: absolute;
     top: 15px;
     left: 28px;
+}
+.logo-top-leftt img{
+  height: 70px;
+
 }
 .logo-top-leftt a{
 text-decoration: none;
 color: white;
 font-size: 30px;
 margin-left: 20px;
-/* background-color: pink; */
-}
+position: absolute;
+    top: 20px;
+    left: 66px;
+    width: 150px;
+    color: #7b7471;
+  }
 .bars-top-right{
   /* background-color: purple; */
   position: absolute;
