--- a/src/Residence/Residence.css
+++ b/src/Residence/Residence.css
@@ -31,7 +31,7 @@
 }
 .reside-paragraph{
   font-family: 'luxury';
-  /* background-color: pink; */
+  font-weight: normal;
   text-align: center;
   color: #7b7471;
 }
@@ -43,12 +43,12 @@
 
 
 .grid-child-element {
-  object-fit: fill;
+  object-fit: cover;
 }
 .residenceimagehome {
   width: 100%;
   height: 100vh;
-  object-fit: fill;
+  object-fit: cover;
 }
 
 
@@ -56,11 +56,13 @@
   height: 100px;
 }
 .button-46 {
+  font-family: 'luxury';
   align-items: center;
   background-color: goldenrod;
   border: 1px solid #DFDFDF;
   box-sizing: border-box;
-  color: #000000;
+  color: #ffffff;
+  font-weight: bold;
   cursor: pointer;
   font-size: 28px;
   justify-content: center;
@@ -82,6 +84,7 @@
 }
 
 .button-46:hover {
+  color: goldenrod;
   background-color: #FFFFFF;
   border-color: rgba(0, 0, 0, 0.19);
 }
@@ -94,18 +97,25 @@
   }
 }
 .logo-top-left{
-  /* background-color: purple; */
   position: absolute;
     top: 15px;
     left: 28px;
 }
+.logo-top-left img{
+  height: 70px;
+
+}
 .logo-top-left a{
 text-decoration: none;
-color: black;
+/* color: black; */
 font-size: 30px;
 margin-left: 20px;
-/* background-color: pink; */
-}
+position: absolute;
+    top: 20px;
+    left: 66px;
+    width: 150px;
+    color: #7b7471;
+  }
 .bars-top-right{
   /* background-color: purple; */
   position: absolute;
