--- a/src/Residence/Residencechild.css
+++ b/src/Residence/Residencechild.css
@@ -131,19 +131,20 @@
   }
   .explore {
     font-family: 'luxury';
-    
-    font-weight: bold;
+    font-weight: normal;
     color: #7c7471;
     margin-bottom: 0;
     font-weight: bold;
     text-align: center;
     cursor: pointer;
+    /* background: pink; */
   }
   .paragraph-bottom{
     /* background-color: pink; */
+    padding-top: 38px;
     height: 200px;
-    font-size: 20px;
-    margin-top: 20px;
+    font-size: 19px;
+    margin-top: 25px;
     color: grey;
     font-family: 'luxury';
   }
@@ -151,4 +152,8 @@
     margin-top: 70px;
     height: 168px;
     margin-bottom: 10px;
+  }
+  .downangle{
+    transform: scale(1.9,1.6);
+    /* font-weight: normal; */
   }
