--- a/src/Residence/Rooms.css
+++ b/src/Residence/Rooms.css
@@ -4,11 +4,21 @@
     grid-gap: 0px;
     margin-left: 20px;
     margin-right: 20px;
-    /* background-color: pink; */
     margin-bottom: 0;
     height: 77vh;
     
-}@font-face {
+}
+.grid-containneer {
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr;
+    grid-gap: 0px;
+    margin-left: 20px;
+    margin-right: 20px;
+    margin-bottom: 0;
+    /* height: 50vh; */
+    
+}
+@font-face {
     font-family: "luxury";
     src: url(/din/fonts/FF\ DIN\ Pro\ Regular.otf);
   }
@@ -21,7 +31,7 @@
 }
 .sidebar-center{
     /* background-color: pink; */
-    height: 290px;
+    height: 270px;
     margin-top: 20px;
     padding: 10px;
     font-size: 170%;
@@ -54,7 +64,7 @@
 .paragraph-bottom-disclaimer{
     height: 200px;
     font-size: 20px;
-    margin-top: 20px;
+    /* margin-top: 0px; */
     color: rgb(85, 85, 85);
     font-family: 'luxury';
     /* background: pink; */
@@ -74,5 +84,33 @@
     font-weight: bold;
     text-align: center;
     cursor: pointer;
-    margin-top: 150px;
+    margin-top: 10px;
+  }
+  .example{
+    font-family: 'luxury';
+    font-size: 15px;
+    color: #7b7471;
+    padding-top: 5px;
+    padding-bottom: 10px;
+  }
+  .residence-home-logo-white{
+    margin-top: 10px;
+    height: 250px;
+    width: 270px;
+    margin-bottom: 10px;
+    padding-bottom: -6px;
+    /* background-color: pink; */
+  }
+  h6.gold-secition{
+    font-size: 18px;
+    margin-top: -29px;
+    margin-right: 310px;
+  }
+  h1.gold-secition{
+    font-size: 280%;
+  }
+  .gold-secition{
+    font-family: 'luxury';
+    
+
   }
