--- a/src/Navbar/Full.css
+++ b/src/Navbar/Full.css
@@ -1,30 +1,45 @@
-
-.full-menu{
-    background-color: goldenrod;
-    height: 100vh;
-    text-align: center;
-    padding: 10px;
+.full-menu {
+  background-color: goldenrod;
+  height: 100vh;
+  text-align: center;
+  padding: 10px;
 }
-.menu-opt{
-    margin-top: 50px;
-    font-family: 'luxury';
-    color: rgb(104, 101, 101);
-    font-size: 320%;
+.menu-opt {
+  margin-top: 50px;
+  font-family: "luxury";
+  color: rgb(104, 101, 101);
+  font-size: 320%;
 }
 @font-face {
-    font-family: "luxury";
-    src: url(/din/fonts/FF\ DIN\ Pro\ Regular.otf);
-  }
-  .option1{
-/* background-color: brown; */
-margin-top: 190px;
-  }
-  .mini-topic{
-    font-family: 'luxury';
-    font-size: 20px;
+  font-family: "luxury";
+  src: url(/din/fonts/FF\ DIN\ Pro\ Regular.otf);
+}
+.option1 {
+  /* background-color: brown; */
+  margin-top: 190px;
+}
+.mini-topic {
+  font-family: "luxury";
+  font-size: 20px;
+  /* background-color: brown; */
+}
+a {
+  text-decoration: none;
+}
+@media all and (max-width: 500px) {
+  .option1 {
     /* background-color: brown; */
-    
+    margin-top: -2%;
   }
-  a{
-    text-decoration: none;
+  .menu-opt {
+    /* background-color: brown; */
+    margin-top: 10%;
+    font-family: "luxury";
+    color: rgb(104, 101, 101);
+    font-size: 210%;
   }
+  .mini-topic {
+    font-family: "luxury";
+    font-size: 40%;
+  }
+}
