--- a/src/Amenities/Amenities.css
+++ b/src/Amenities/Amenities.css
@@ -110,3 +110,74 @@
   .residenceimagehome{
     object-fit: cover;
   }
+  @media all and (max-width: 500px) {
+    .logo-top-left {
+      position: absolute;
+      top: 15px;
+      left: 18px;
+    }
+    .logo-top-left img {
+      height: 50px;
+    }
+    .logo-top-left a {
+      text-decoration: none;
+      font-size: 129%;
+      position: absolute;
+      top: 15px;
+      left: 20px;
+      width: 150px;
+      color: #7b7471;
+    }
+    .bars-top-right {
+      position: absolute;
+      top: 29px;
+      right: 40px;
+      transform: scale(2.9, 1.5);
+      font-size: 15px;
+      margin-top: 8px;
+      color: white;
+    }
+    .grid-container-element {
+      display: grid;
+      grid-template-columns: 7fr 6fr;
+      grid-gap: 0px;
+      width: 100%;
+      height: 100vh;
+      background-color: grey;
+      margin: 0 0 0 0;
+    }
+    .navbary-loogo {
+      height: 67px;
+      border-radius: 90px;
+      margin-bottom: 10px;
+    }
+    .reside.style {
+      font-family: "luxury2";
+      font-size: 70%;
+      color: #7b7471;
+      margin-bottom: 15px;
+      margin-top: 15px;
+      /* background-color: peru; */
+    }
+    .reside-paragraph.disc {
+      font-family: "luxury";
+      font-weight: normal;
+      text-align: center;
+      /* background-color: brown; */
+      color: #7b7471;
+      font-size: 60%;
+    }
+    .content {
+      /* background: pink; */
+      
+      height: 350px;
+      margin-top: 65%;
+    }
+  
+    .button-46 {
+      font-family: "luxury";
+      font-size: 60%;
+      min-width: 200px;
+      padding: 14px 16px;
+    }
+  }
