--- a/src/Neighborhood/Neighborhood.css
+++ b/src/Neighborhood/Neighborhood.css
@@ -127,3 +127,73 @@ position: absolute;
     color: white;
 
 }
+@media all and (max-width: 500px) {
+  .logo-top-leftt {
+    position: absolute;
+    top: 15px;
+    left: 18px;
+  }
+  .logo-top-leftt img {
+    height: 50px;
+  }
+  .logo-top-leftt a {
+    text-decoration: none;
+    font-size: 129%;
+    position: absolute;
+    top: 15px;
+    left: 38px;
+    width: 150px;
+    color: #ffffff;
+  }
+  .bars-top-right {
+    position: absolute;
+    top: 29px;
+    right: 40px;
+    transform: scale(2.9, 1.5);
+    font-size: 15px;
+    margin-top: 8px;
+    color: white;
+  }
+  .grid-container-element {
+    display: grid;
+    grid-template-columns: 7fr 6fr;
+    grid-gap: 0px;
+    width: 100%;
+    height: 100vh;
+    background-color: grey;
+    margin: 0 0 0 0;
+  }
+  .navbary-loogo {
+    height: 67px;
+    border-radius: 90px;
+    margin-bottom: 10px;
+  }
+  .jirani-main {
+    font-family: "luxury2";
+    font-size: 80%;
+    color: white;
+    margin-bottom: 15px;
+    margin-top: 15px;
+    /* background-color: peru; */
+  }
+  .jirani-paragraph {
+    font-family: "luxury";
+    font-weight: normal;
+    text-align: center;
+    color: #ffffff;
+    font-size: 60%;
+  }
+  .content {
+    /* background: pink; */
+    
+    height: 320px;
+    margin-top: 65%;
+  }
+
+  .button-46 {
+    font-family: "luxury";
+    font-size: 60%;
+    min-width: 200px;
+    padding: 14px 16px;
+  }
+}
