--- a/src/Residence/Residence.css
+++ b/src/Residence/Residence.css
@@ -19,28 +19,25 @@
   /* background: pink; */
   font-size: 200%;
   height: 320px;
- 
 }
-.reside{
-  font-family: 'luxury2';
+.reside {
+  font-family: "luxury2";
   font-size: 40px;
   color: #7b7471;
   margin-bottom: 15px;
   margin-top: 15px;
-  
 }
-.reside-paragraph{
-  font-family: 'luxury';
+.reside-paragraph {
+  font-family: "luxury";
   font-weight: normal;
   text-align: center;
   color: #7b7471;
 }
 
 @font-face {
-  font-family: 'luxury2';
+  font-family: "luxury2";
   src: url(/din/fonts/FF\ DIN\ Pro\ Regular\ 2.otf);
 }
-
 
 .grid-child-element {
   object-fit: cover;
@@ -57,10 +54,10 @@
   margin-bottom: 10px;
 }
 .button-46 {
-  font-family: 'luxury';
+  font-family: "luxury";
   align-items: center;
   background-color: goldenrod;
-  border: 1px solid #DFDFDF;
+  border: 1px solid #dfdfdf;
   box-sizing: border-box;
   color: #ffffff;
   font-weight: bold;
@@ -71,7 +68,7 @@
   max-width: 100%;
   padding: 14px 22px;
   text-decoration: none;
-  transition: all .2s;
+  transition: all 0.2s;
   user-select: none;
   -webkit-user-select: none;
   touch-action: manipulation;
@@ -86,7 +83,7 @@
 
 .button-46:hover {
   color: goldenrod;
-  background-color: #FFFFFF;
+  background-color: #ffffff;
   border-color: rgba(0, 0, 0, 0.19);
 }
 
@@ -97,34 +94,103 @@
     padding: 14px 16px;
   }
 }
-.logo-top-left{
-  position: absolute;
-    top: 15px;
-    left: 28px;
-}
-.logo-top-left img{
-  height: 70px;
 
+.logo-top-left {
+  position: absolute;
+  top: 15px;
+  left: 28px;
 }
-.logo-top-left a{
-text-decoration: none;
-/* color: black; */
-font-size: 30px;
-margin-left: 20px;
-position: absolute;
-    top: 20px;
-    left: 66px;
+.logo-top-left img {
+  height: 70px;
+  object-fit: fill;
+}
+.logo-top-left a {
+  text-decoration: none;
+  font-size: 30px;
+  position: absolute;
+  top: 20px;
+  left: 66px;
+  width: 150px;
+  color: #7b7471;
+}
+.bars-top-right {
+  position: absolute;
+  top: 10px;
+  right: 59px;
+  transform: scale(2.9, 1.5);
+  font-size: 18px;
+  margin-top: 8px;
+  color: white;
+}
+@media all and (max-width: 500px) {
+  .logo-top-left {
+    position: absolute;
+    top: 15px;
+    left: 18px;
+  }
+  .logo-top-left img {
+    height: 50px;
+  }
+  .logo-top-left a {
+    text-decoration: none;
+    font-size: 129%;
+    position: absolute;
+    top: 15px;
+    left: 20px;
     width: 150px;
     color: #7b7471;
   }
-.bars-top-right{
-  /* background-color: purple; */
-  position: absolute;
-    top: 10px;
-    right: 59px;
-    transform: scale(2.9,1.5);
-    font-size: 18px;
+  .bars-top-right {
+    position: absolute;
+    top: 29px;
+    right: 40px;
+    transform: scale(2.9, 1.5);
+    font-size: 15px;
     margin-top: 8px;
     color: white;
+  }
+  .grid-container-element {
+    display: grid;
+    grid-template-columns: 7fr 6fr;
+    grid-gap: 0px;
+    width: 100%;
+    height: 100vh;
+    background-color: grey;
+    margin: 0 0 0 0;
+  }
+  .navbary-loogo {
+    height: 67px;
+    border-radius: 90px;
+    margin-bottom: 10px;
+  }
+  .reside {
+    font-family: "luxury2";
+    font-size: 100%;
+    color: #7b7471;
+    margin-bottom: 15px;
+    margin-top: 15px;
+    /* background-color: peru; */
+  }
+  .reside-paragraph {
+    font-family: "luxury";
+    font-weight: normal;
+    text-align: center;
+    /* background-color: brown; */
+    color: #7b7471;
+    font-size: 70%;
+  }
+  .content {
+    /* background: pink; */
+    
+    height: 320px;
+    margin-top: 65%;
+  }
 
+  .button-46 {
+    font-family: "luxury";
+    font-size: 60%;
+    min-width: 200px;
+    padding: 14px 16px;
+  }
 }
+ 
