--- a/src/Residence/Residencechild.css
+++ b/src/Residence/Residencechild.css
@@ -1,159 +1,204 @@
 .grid-resident-element {
   /* background-color: green; */
-    display: grid;
-    grid-gap: 10px; 
-    grid-template-columns: 3fr 10fr;
-    margin: 0 0 0 0;
- 
-  }
-  
-  
-  @font-face {
-    font-family: "luxury";
-    src: url(/din/fonts/FF\ DIN\ Pro\ Regular.otf);
-  }
-  @font-face {
-    font-family: "luxury2";
-    src: url(/din/fonts/FF\ DIN\ Pro\ Regular\ 2.otf);
-  }
-  @font-face {
-    font-family: "luxury3";
-    src: url(/luxury/DIN\ Black.ttf);
-  }
-  @font-face {
-    font-family: "luxury4";
-    src: url(/luxury/DIN\ Medium.ttf);
-  }
+  display: grid;
+  grid-gap: 10px;
+  grid-template-columns: 3fr 10fr;
+  margin: 0 0 0 0;
+}
 
-  .contentarea {
-    margin-top: 20px;
-    margin-left: 10px;
-    border-bottom: 5px solid goldenrod;
-    color: goldenrod;
-    text-align: left;
-  }
-  .luxury{
-    font-family: 'luxury';
-    margin-left: 20px;
-    margin-bottom: 30px;
-    /* background-color: pink; */
-  }
-  .childimage {
-    width: 100%;
-  }
-  .grid-child-purple {
-   /* background-color: aquamarine; */
-   border: none;
-   margin-left: 20px;
-  }
-  h6.gold-section{
-    font-size: 18px;
-    margin-top: 30px;
-    margin-right: 310px;
-  }
-  h1.gold-section{
-    font-size: 280%;
-  }
-  .gold-section{
-    font-family: 'luxury';
-    
+@font-face {
+  font-family: "luxury";
+  src: url(/din/fonts/FF\ DIN\ Pro\ Regular.otf);
+}
+@font-face {
+  font-family: "luxury2";
+  src: url(/din/fonts/FF\ DIN\ Pro\ Regular\ 2.otf);
+}
+@font-face {
+  font-family: "luxury3";
+  src: url(/luxury/DIN\ Black.ttf);
+}
+@font-face {
+  font-family: "luxury4";
+  src: url(/luxury/DIN\ Medium.ttf);
+}
 
-  }
-  .grid-child-element.green {
-    border: none;
-    margin-right: 30px;
-   }
-  .the-residences {
-    
-    color: gray;
-    height: 370px;
-    background: #efbf3b;
-    padding: 5px;
-    text-align: center;
-  }
-.conten-twise{
+.contentarea {
+  margin-top: 20px;
+  margin-left: 10px;
+  border-bottom: 5px solid goldenrod;
+  color: goldenrod;
+  text-align: left;
+}
+.luxury {
+  font-family: "luxury";
+  margin-left: 20px;
+  margin-bottom: 30px;
+  /* background-color: pink; */
+}
+.childimage {
+  width: 100%;
+}
+.grid-child-purple {
+  /* background-color: aquamarine; */
+  border: none;
+  margin-left: 20px;
+}
+h6.gold-section {
+  font-size: 18px;
+  margin-top: -19%;
+  margin-right: 310px;
+}
+h1.gold-section {
+  font-size: 280%;
+}
+.gold-section {
+  font-family: "luxury";
+}
+.grid-child-element.green {
+  border: none;
+  margin-right: 30px;
+}
+.the-residences {
+  color: gray;
+  height: 370px;
+  background: #efbf3b;
+  padding: 5px;
+  text-align: center;
+}
+.conten-twise {
   margin-top: 20px;
   padding: 5px;
   /* background-color: brown; */
 }
-  .care{
-    color: grey;
-    font-family: 'luxury';
-    font-size: 30px;
-  }
-  
-  .content-3 {
-    margin-top: 10px;
-    padding: 6px;
-    /* border: 5px solid yellow; */
-    width: 300px;
-    height: 400px;
-    text-align: left;
-    position: absolute;
-    bottom: -14px;
-    left: 28px;
-    /* background: brown; */
+.care {
+  color: grey;
+  font-family: "luxury";
+  font-size: 30px;
+}
 
+.content-3 {
+  margin-top: 10px;
+  padding: 6px;
+  /* border: 5px solid yellow; */
+  width: 300px;
+  height: 400px;
+  text-align: left;
+  position: absolute;
+  bottom: -14px;
+  left: 28px;
+  /* background: brown; */
+}
+/* EXPLORE */
+.arrow {
+  position: absolute;
+  top: 123%;
+  left: 50%;
+  /* background-color: gray; */
+  transform: translate(-50%, -50%);
+}
+.arrow span {
+  display: block;
+  width: 30px;
+  height: 30px;
+  border-bottom: 4px solid #000000;
+  border-right: 4px solid #000000;
+  transform: rotate(45deg);
+  margin: -10px;
+  animation: scroll 2s infinite;
+}
+.arrow span:nth-child(2) {
+  animation-delay: -0.4s;
+}
+@keyframes scroll {
+  0% {
+    opacity: 1;
+    transform: rotate(45deg) translate(-20px, -20px);
   }
-  /* EXPLORE */
-  .arrow {
-    position: absolute;
-    top: 123%;
-    left: 50%;
-    /* background-color: gray; */
-    transform: translate(-50%, -50%);
+  50% {
+    opacity: 1;
   }
-  .arrow span {
+  100% {
+    opacity: 0;
+    transform: rotate(45deg) translate(-20px, -20px);
+  }
+}
+.explore {
+  font-family: "luxury";
+  font-weight: normal;
+  color: #7c7471;
+  margin-bottom: 0;
+  font-weight: bold;
+  text-align: center;
+  cursor: pointer;
+  /* background: pink; */
+}
+.paragraph-bottom {
+  /* background-color: pink; */
+  padding-top: 38px;
+  height: 200px;
+  font-size: 19px;
+  margin-top: 25px;
+  color: grey;
+  font-family: "luxury";
+}
+.residence-home-logo-grey {
+  margin-top: -8%;
+  height: 398px;
+  margin-bottom: 0px;
+}
+.downangle {
+  transform: scale(1.9, 1.6);
+  /* font-weight: normal; */
+}
+@media all and (max-width: 500px) {
+  .grid-resident-element {
     display: block;
-    width: 30px;
-    height: 30px;
-    border-bottom: 4px solid #000000;
-    border-right: 4px solid #000000;
-    transform: rotate(45deg);
-    margin: -10px;
-    animation: scroll 2s infinite;
   }
-  .arrow span:nth-child(2) {
-    animation-delay: -0.4s;
+  .residence-home-logo-grey {
+    margin-top: -8%;
+    height: 258px;
+    margin-bottom: 0px;
   }
-  @keyframes scroll {
-    0% {
-      opacity: 1;
-      transform: rotate(45deg) translate(-20px, -20px);
-    }
-    50% {
-      opacity: 1;
-    }
-    100% {
-      opacity: 0;
-      transform: rotate(45deg) translate(-20px, -20px);
-    }
-  }
-  .explore {
-    font-family: 'luxury';
-    font-weight: normal;
-    color: #7c7471;
-    margin-bottom: 0;
-    font-weight: bold;
+  .the-residences {
+    color: gray;
+    height: 220px;
+    background: #efbf3b;
+    padding: 5px;
     text-align: center;
-    cursor: pointer;
-    /* background: pink; */
   }
-  .paragraph-bottom{
-    /* background-color: pink; */
-    padding-top: 38px;
-    height: 200px;
-    font-size: 19px;
-    margin-top: 25px;
+  h6.gold-section {
+    font-size: 18px;
+    margin-top: -19%;
+    margin-right: 310px;
+  }
+  h1.gold-section {
+    font-size: 280%;
+  }
+  .gold-section {
+    font-family: "luxury";
+  }
+  .care {
     color: grey;
-    font-family: 'luxury';
+    font-family: "luxury";
+    font-size: 150%;
+    text-align: center;
   }
-  .residence-home-logo-grey{
-    margin-top: 70px;
-    height: 168px;
-    margin-bottom: 10px;
+  .paragraph-bottom {
+    /* background-color: pink; */
+    padding-top: 28px;
+    padding-left: 10px;
+    padding-right: 10px;
+    height: 110px;
+    font-size: 19px;
+    margin-top: -1%;
+    color: grey;
+    font-family: "luxury";
   }
-  .downangle{
-    transform: scale(1.9,1.6);
-    /* font-weight: normal; */
+  .childimage{
+    object-fit: cover;
   }
+  .kubwa-resident{
+    margin: 0 0  0  0;
+  }
+}
